@@ -2,3 +2,4 @@ require 'spec/rails/matchers/associations'
 
 require 'rspec_validation_expectations'
 require 'rspec_association_expectations'
+require 'rspec_other_expectations'
