@@ -1,1 +1,3 @@
+4/16/09 - Added it_should_protect expectation [Matthew Bass]
+
 8/14/08 - Initial import [Matthew Bass]
